added experimental nbow model

--- a/1_nbow.ipynb
+++ b/1_nbow.ipynb
@@ -51,7 +51,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<torchtext.experimental.datasets.raw.text_classification.RawTextIterableDataset object at 0x7f23359939a0>\n"
+      "<torchtext.experimental.datasets.raw.text_classification.RawTextIterableDataset object at 0x7f5bd18ecfa0>\n"
      ]
     }
    ],
@@ -128,8 +128,8 @@
     "        \n",
     "    n_train_examples = int(len(raw_train_data) * split_ratio)\n",
     "        \n",
-    "    valid_data = raw_train_data[:n_train_examples]\n",
-    "    train_data = raw_train_data[n_train_examples:]\n",
+    "    train_data = raw_train_data[:n_train_examples]\n",
+    "    valid_data = raw_train_data[n_train_examples:]\n",
     "    \n",
     "    return train_data, valid_data"
    ]
@@ -152,8 +152,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of training examples: 5000\n",
-      "Number of validation examples: 20000\n",
+      "Number of training examples: 20000\n",
+      "Number of validation examples: 5000\n",
       "Number of testing examples: 25000\n"
      ]
     }
@@ -259,26 +259,26 @@
     {
      "data": {
       "text/plain": [
-       "[('the', 48049),\n",
-       " ('.', 46847),\n",
-       " (',', 38799),\n",
-       " ('a', 23646),\n",
-       " ('and', 23193),\n",
-       " ('of', 20752),\n",
-       " ('to', 19099),\n",
-       " (\"'\", 18536),\n",
-       " ('is', 15569),\n",
-       " ('it', 13913),\n",
-       " ('i', 13864),\n",
-       " ('in', 13151),\n",
-       " ('this', 11868),\n",
-       " ('that', 10177),\n",
-       " ('s', 8460),\n",
-       " ('was', 7508),\n",
-       " ('movie', 6964),\n",
-       " ('as', 6337),\n",
-       " ('with', 6184),\n",
-       " ('for', 6092)]"
+       "[('the', 189116),\n",
+       " ('.', 188121),\n",
+       " (',', 153127),\n",
+       " ('a', 93793),\n",
+       " ('and', 92021),\n",
+       " ('of', 82137),\n",
+       " ('to', 74996),\n",
+       " (\"'\", 73288),\n",
+       " ('is', 61511),\n",
+       " ('it', 56770),\n",
+       " ('i', 55777),\n",
+       " ('in', 52098),\n",
+       " ('this', 46729),\n",
+       " ('that', 40676),\n",
+       " ('s', 33495),\n",
+       " ('was', 29882),\n",
+       " ('movie', 27993),\n",
+       " ('as', 25564),\n",
+       " ('with', 24610),\n",
+       " ('for', 24381)]"
       ]
      },
      "execution_count": 16,
@@ -369,28 +369,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([   12,    71,     7,   389,    14,    23,     5,  1526,    53,     7,\n",
-      "          674,     4,    22,    12,    95,   226,    11,     5,   120,     3,\n",
-      "          269,    34,    10,    15,  8559,  5795,  4922,   823,    13,     2,\n",
-      "           23,     4,    70,    10,    29,    65,     5,   269,     3,   231,\n",
-      "          240,    10,    15, 11384,   823,    13,    14,    23,     6,   138,\n",
-      "            5,     0,    20,  8257,     3,    12,   119, 11384,    59,    86,\n",
-      "            6,    31,     5,  1233,    15,    62,    10,     5,    83,   547,\n",
-      "            3,    70,    10,   137,    12,   166,     9,    27,   322,    50,\n",
-      "           13,    14,    18,  3717,  8257,     4,    22,    98,    67,   199,\n",
-      "          825,     3,   606,   220,     7,     2,  4794,   151,    15,    99,\n",
-      "           14,    23,  8394,     4,  1458,   160,   653,    47,    14,    23,\n",
-      "            3,    10,    11,    55,    49,    79,     4,    12,   110,    98,\n",
-      "            5,   358,  1512,    18,    15,    99,    76,  5469,     3,    76,\n",
-      "          125,     5,   807,  3870,     4,    28,    60,    74,    61,    92,\n",
-      "            0,   625,     9,    16,    40, 15643,    26,    61,   434,     4,\n",
-      "           12,    31,    83,  1211,     3,     2,    18,    10,    29,   404,\n",
-      "           10,    34,   159,     6,    54,    14,    10,  1568,     8,    35,\n",
-      "          287,  3401,   409,     4,   137,    10,    46,    67,  8362,    13,\n",
-      "           14,    18,     3,    98,     5,  4798,    18,  1467,    29,     5,\n",
-      "          256,    64,     6,    11,  5040,     3,   146,  8257,  3717,   139,\n",
-      "         1529,   181,    76,  1420,     4,   133,  1903,  2414,  2289,   606,\n",
-      "            3])\n"
+      "tensor([  588,  7875,    10,     5,    58,   211,     6,     5,    58,     0,\n",
+      "          170,     3,    32,    80,    18,     9,   329,     7,  1480,     9,\n",
+      "           17,     2,    34,    12,   388,   122,     4,     6,    11,   277,\n",
+      "            5,   200,     7,   116,    20,   113,   654,  1791,     7,   125,\n",
+      "         1453,    19,    39,    88,    96,  2494,  1109,     4,     6,    43,\n",
+      "          134,     2,  1791,     7,     2,   490,     3,    43,    10,     9,\n",
+      "         5697,     9,    76,    44,     2,   421,   515,     8,   277,     2,\n",
+      "          364,     7,     2,   490,     8,     2,   599,   829,   441,     3,\n",
+      "            2,  4172,   113,    30,   120,  1982,     4,    34,  2865,     6,\n",
+      "           34,  2320,    42,   883,    20,     5, 19273,  5565,  1642,     3,\n",
+      "            2,   568,     7,    41,   166,  2865,  2092,  1895,    42,  1450,\n",
+      "            8,    35,    41,  2074,  2421,     7,     2,  6348,  6215,   337,\n",
+      "        21887,     2,  2865,  2242,    13,     2,   364,     6,   545,     7,\n",
+      "            2,  2865,  1289,     3,    14,    10,    75,     2,  1585,     7,\n",
+      "            2,    23,    30,     2,    62,   611,     3,     2,  1779,     7,\n",
+      "         7591,    10,  2380,     6,   264,     8,   260,     4,     2,   562,\n",
+      "            7,  2865,     0,    10, 11372,     4,     6,     2,   102,     2,\n",
+      "         1289,   934,  2528,     8,     2,   595,  1126,  6171,    10,  1108,\n",
+      "            3,     2,   146,     7,     2,    23,   434,    10,     0,  1389,\n",
+      "            4,    22,  8882,    44,     5,   447,   974,  1791,     3,   895,\n",
+      "         8959,     6,   885,  3832,   210,   579,   370,     4,    22,     2,\n",
+      "         1585,     7,     2,    64,    30,   108,  3818,     8,    35,   737,\n",
+      "        13681,     3])\n"
      ]
     }
    ],
@@ -409,7 +410,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['i', 'would', 'of', 'given', 'this', 'film', 'a', 'zero', 'out', 'of', 'ten', ',', 'but', 'i', 'will', 'give', 'it', 'a', 'two', '.', 'reason', 'one', 'is', 'that', 'shah', 'rukh', 'khan', 'appears', 'in', 'the', 'film', ',', 'which', 'is', 'not', 'really', 'a', 'reason', '.', 'last', 'point', 'is', 'that', 'rani', 'appears', 'in', 'this', 'film', 'and', 'does', 'a', '<unk>', 'with', 'kamal', '.', 'i', 'love', 'rani', 'very', 'much', 'and', 'have', 'a', 'respect', 'that', 'she', 'is', 'a', 'great', 'actress', '.', 'which', 'is', 'why', 'i', 'didn', \"'\", 't', 'enjoy', 'her', 'in', 'this', 'movie', 'kissing', 'kamal', ',', 'but', 'its', 'no', 'big', 'deal', '.', 'anyway', 'enough', 'of', 'the', 'bedroom', 'scenes', 'that', 'made', 'this', 'film', 'noticeable', ',', 'lets', 'actually', 'talk', 'about', 'this', 'film', '.', 'is', 'it', 'good', 'or', 'bad', ',', 'i', 'think', 'its', 'a', 'completely', 'rubbish', 'movie', 'that', 'made', 'me', 'yawn', '.', 'me', 'being', 'a', 'fantastic', 'critic', ',', 'you', 'can', 'see', 'my', 'other', '<unk>', 'review', \"'\", 's', 'by', 'clicking', 'on', 'my', 'name', ',', 'i', 'have', 'great', 'taste', '.', 'the', 'movie', 'is', 'not', 'entertaining', 'is', 'one', 'thing', 'and', 'if', 'this', 'is', 'suppose', 'to', 'be', 'hard', 'hitting', 'cinema', ',', 'why', 'is', 'there', 'no', 'morale', 'in', 'this', 'movie', '.', 'its', 'a', 'biased', 'movie', 'thats', 'not', 'a', 'true', 'story', 'and', 'it', 'stinks', '.', 'watching', 'kamal', 'kissing', 'these', 'actresses', 'makes', 'me', 'sick', ',', 'man', 'cant', 'kiss', 'properly', 'anyway', '.']\n"
+      "['david', 'mamet', 'is', 'a', 'very', 'interesting', 'and', 'a', 'very', '<unk>', 'director', '.', 'his', 'first', 'movie', \"'\", 'house', 'of', 'games', \"'\", 'was', 'the', 'one', 'i', 'liked', 'best', ',', 'and', 'it', 'set', 'a', 'series', 'of', 'films', 'with', 'characters', 'whose', 'perspective', 'of', 'life', 'changes', 'as', 'they', 'get', 'into', 'complicated', 'situations', ',', 'and', 'so', 'does', 'the', 'perspective', 'of', 'the', 'viewer', '.', 'so', 'is', \"'\", 'homicide', \"'\", 'which', 'from', 'the', 'title', 'tries', 'to', 'set', 'the', 'mind', 'of', 'the', 'viewer', 'to', 'the', 'usual', 'crime', 'drama', '.', 'the', 'principal', 'characters', 'are', 'two', 'cops', ',', 'one', 'jewish', 'and', 'one', 'irish', 'who', 'deal', 'with', 'a', 'racially', 'charged', 'area', '.', 'the', 'murder', 'of', 'an', 'old', 'jewish', 'shop', 'owner', 'who', 'proves', 'to', 'be', 'an', 'ancient', 'veteran', 'of', 'the', 'israeli', 'independence', 'war', 'triggers', 'the', 'jewish', 'identity', 'in', 'the', 'mind', 'and', 'heart', 'of', 'the', 'jewish', 'detective', '.', 'this', 'is', 'were', 'the', 'flaws', 'of', 'the', 'film', 'are', 'the', 'more', 'obvious', '.', 'the', 'process', 'of', 'awakening', 'is', 'theatrical', 'and', 'hard', 'to', 'believe', ',', 'the', 'group', 'of', 'jewish', '<unk>', 'is', 'operatic', ',', 'and', 'the', 'way', 'the', 'detective', 'eventually', 'walks', 'to', 'the', 'final', 'violent', 'confrontation', 'is', 'pathetic', '.', 'the', 'end', 'of', 'the', 'film', 'itself', 'is', '<unk>', 'smart', ',', 'but', 'disappoints', 'from', 'a', 'human', 'emotional', 'perspective', '.', 'joe', 'mantegna', 'and', 'william', 'macy', 'give', 'strong', 'performances', ',', 'but', 'the', 'flaws', 'of', 'the', 'story', 'are', 'too', 'evident', 'to', 'be', 'easily', 'compensated', '.']\n"
      ]
     }
    ],
@@ -549,7 +550,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The model has 2,007,202 trainable parameters\n"
+      "The model has 2,500,402 trainable parameters\n"
      ]
     }
    ],
@@ -695,9 +696,9 @@
        "        [ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.0000],\n",
        "        [-0.0382, -0.2449,  0.7281,  ..., -0.1459,  0.8278,  0.2706],\n",
        "        ...,\n",
-       "        [-0.6815,  0.5909, -0.7525,  ...,  0.3713, -0.2969,  0.0298],\n",
-       "        [-0.5175, -0.5990,  0.3284,  ..., -0.9506, -0.4309,  0.5237],\n",
-       "        [ 0.0715, -0.1643, -0.1323,  ..., -0.0919, -0.6174, -0.0966]])"
+       "        [-0.4769,  0.6460, -0.2009,  ..., -0.2221, -0.2449,  0.8116],\n",
+       "        [ 0.7019, -0.0129,  0.7528,  ..., -0.8730,  0.3202,  0.0773],\n",
+       "        [-0.1876,  0.1964,  0.4381,  ...,  0.0729, -0.5052,  0.3773]])"
       ]
      },
      "execution_count": 37,
@@ -717,7 +718,7 @@
     {
      "data": {
       "text/plain": [
-       "676"
+       "661"
       ]
      },
      "execution_count": 38,
@@ -738,7 +739,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['<unk>', '<pad>', '\\x96', 'hadn', '****', '*1/2', 'camera-work', '-the', '100%', '***spoilers***']\n"
+      "['<unk>', '<pad>', '\\x96', '****', 'hadn', 'camera-work', '*1/2', '100%', '$1', '*****']\n"
      ]
     }
    ],
@@ -758,9 +759,9 @@
        "        [ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.0000],\n",
        "        [ 0.7289, -0.7336,  1.5624,  ..., -0.5592, -0.4480, -0.6476],\n",
        "        ...,\n",
-       "        [-1.6673,  0.3275, -0.1615,  ...,  1.3987,  1.1857,  0.3176],\n",
-       "        [ 0.8234, -2.1307, -1.2560,  ..., -3.2311, -1.3947,  0.7691],\n",
-       "        [ 1.5819, -0.5196, -0.5235,  ..., -1.6384,  0.4455,  0.8477]])"
+       "        [ 0.0914,  1.5196,  0.4670,  ...,  0.6393, -0.0332,  0.0185],\n",
+       "        [-0.6290,  0.4650, -0.7165,  ..., -1.3171,  2.0381, -2.0497],\n",
+       "        [-1.1222, -0.0240, -1.0878,  ..., -0.4948, -0.3874,  0.0339]])"
       ]
      },
      "execution_count": 40,
@@ -784,9 +785,9 @@
        "        [ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.0000],\n",
        "        [-0.0382, -0.2449,  0.7281,  ..., -0.1459,  0.8278,  0.2706],\n",
        "        ...,\n",
-       "        [-0.6815,  0.5909, -0.7525,  ...,  0.3713, -0.2969,  0.0298],\n",
-       "        [-0.5175, -0.5990,  0.3284,  ..., -0.9506, -0.4309,  0.5237],\n",
-       "        [ 0.0715, -0.1643, -0.1323,  ..., -0.0919, -0.6174, -0.0966]])"
+       "        [-0.4769,  0.6460, -0.2009,  ..., -0.2221, -0.2449,  0.8116],\n",
+       "        [ 0.7019, -0.0129,  0.7528,  ..., -0.8730,  0.3202,  0.0773],\n",
+       "        [-0.1876,  0.1964,  0.4381,  ...,  0.0729, -0.5052,  0.3773]])"
       ]
      },
      "execution_count": 41,
@@ -949,85 +950,40 @@
      "output_type": "stream",
      "text": [
       "Epoch: 01 | Epoch Time: 0m 0s\n",
-      "\tTrain Loss: 0.690 | Train Acc: 53.61%\n",
-      "\t Val. Loss: 0.684 |  Val. Acc: 58.84%\n",
+      "\tTrain Loss: 0.670 | Train Acc: 63.32%\n",
+      "\t Val. Loss: 0.632 |  Val. Acc: 72.81%\n",
       "Epoch: 02 | Epoch Time: 0m 0s\n",
-      "\tTrain Loss: 0.677 | Train Acc: 63.30%\n",
-      "\t Val. Loss: 0.672 |  Val. Acc: 64.32%\n",
+      "\tTrain Loss: 0.586 | Train Acc: 75.22%\n",
+      "\t Val. Loss: 0.532 |  Val. Acc: 79.30%\n",
       "Epoch: 03 | Epoch Time: 0m 0s\n",
-      "\tTrain Loss: 0.660 | Train Acc: 68.20%\n",
-      "\t Val. Loss: 0.658 |  Val. Acc: 67.35%\n",
+      "\tTrain Loss: 0.480 | Train Acc: 82.33%\n",
+      "\t Val. Loss: 0.442 |  Val. Acc: 83.69%\n",
       "Epoch: 04 | Epoch Time: 0m 0s\n",
-      "\tTrain Loss: 0.639 | Train Acc: 71.68%\n",
-      "\t Val. Loss: 0.639 |  Val. Acc: 68.81%\n",
+      "\tTrain Loss: 0.394 | Train Acc: 86.19%\n",
+      "\t Val. Loss: 0.388 |  Val. Acc: 85.39%\n",
       "Epoch: 05 | Epoch Time: 0m 0s\n",
-      "\tTrain Loss: 0.613 | Train Acc: 73.05%\n",
-      "\t Val. Loss: 0.617 |  Val. Acc: 70.97%\n",
+      "\tTrain Loss: 0.336 | Train Acc: 88.18%\n",
+      "\t Val. Loss: 0.352 |  Val. Acc: 86.54%\n",
       "Epoch: 06 | Epoch Time: 0m 0s\n",
-      "\tTrain Loss: 0.585 | Train Acc: 75.92%\n",
-      "\t Val. Loss: 0.594 |  Val. Acc: 72.90%\n",
+      "\tTrain Loss: 0.296 | Train Acc: 89.64%\n",
+      "\t Val. Loss: 0.332 |  Val. Acc: 86.95%\n",
       "Epoch: 07 | Epoch Time: 0m 0s\n",
-      "\tTrain Loss: 0.552 | Train Acc: 78.71%\n",
-      "\t Val. Loss: 0.571 |  Val. Acc: 74.09%\n",
+      "\tTrain Loss: 0.265 | Train Acc: 90.85%\n",
+      "\t Val. Loss: 0.316 |  Val. Acc: 87.44%\n",
       "Epoch: 08 | Epoch Time: 0m 0s\n",
-      "\tTrain Loss: 0.517 | Train Acc: 80.68%\n",
-      "\t Val. Loss: 0.546 |  Val. Acc: 76.50%\n",
+      "\tTrain Loss: 0.240 | Train Acc: 91.85%\n",
+      "\t Val. Loss: 0.304 |  Val. Acc: 87.95%\n",
       "Epoch: 09 | Epoch Time: 0m 0s\n",
-      "\tTrain Loss: 0.483 | Train Acc: 82.44%\n",
-      "\t Val. Loss: 0.522 |  Val. Acc: 78.04%\n",
+      "\tTrain Loss: 0.220 | Train Acc: 92.60%\n",
+      "\t Val. Loss: 0.298 |  Val. Acc: 88.38%\n",
       "Epoch: 10 | Epoch Time: 0m 0s\n",
-      "\tTrain Loss: 0.449 | Train Acc: 84.73%\n",
-      "\t Val. Loss: 0.499 |  Val. Acc: 79.47%\n",
-      "Epoch: 11 | Epoch Time: 0m 0s\n",
-      "\tTrain Loss: 0.419 | Train Acc: 86.93%\n",
-      "\t Val. Loss: 0.479 |  Val. Acc: 80.51%\n",
-      "Epoch: 12 | Epoch Time: 0m 0s\n",
-      "\tTrain Loss: 0.389 | Train Acc: 88.38%\n",
-      "\t Val. Loss: 0.459 |  Val. Acc: 81.51%\n",
-      "Epoch: 13 | Epoch Time: 0m 0s\n",
-      "\tTrain Loss: 0.361 | Train Acc: 89.28%\n",
-      "\t Val. Loss: 0.443 |  Val. Acc: 82.26%\n",
-      "Epoch: 14 | Epoch Time: 0m 0s\n",
-      "\tTrain Loss: 0.336 | Train Acc: 90.70%\n",
-      "\t Val. Loss: 0.429 |  Val. Acc: 82.69%\n",
-      "Epoch: 15 | Epoch Time: 0m 0s\n",
-      "\tTrain Loss: 0.310 | Train Acc: 91.91%\n",
-      "\t Val. Loss: 0.416 |  Val. Acc: 83.17%\n",
-      "Epoch: 16 | Epoch Time: 0m 0s\n",
-      "\tTrain Loss: 0.290 | Train Acc: 92.87%\n",
-      "\t Val. Loss: 0.405 |  Val. Acc: 83.48%\n",
-      "Epoch: 17 | Epoch Time: 0m 0s\n",
-      "\tTrain Loss: 0.268 | Train Acc: 93.73%\n",
-      "\t Val. Loss: 0.396 |  Val. Acc: 83.86%\n",
-      "Epoch: 18 | Epoch Time: 0m 0s\n",
-      "\tTrain Loss: 0.252 | Train Acc: 94.08%\n",
-      "\t Val. Loss: 0.387 |  Val. Acc: 84.18%\n",
-      "Epoch: 19 | Epoch Time: 0m 0s\n",
-      "\tTrain Loss: 0.240 | Train Acc: 94.38%\n",
-      "\t Val. Loss: 0.380 |  Val. Acc: 84.43%\n",
-      "Epoch: 20 | Epoch Time: 0m 0s\n",
-      "\tTrain Loss: 0.221 | Train Acc: 95.06%\n",
-      "\t Val. Loss: 0.374 |  Val. Acc: 84.63%\n",
-      "Epoch: 21 | Epoch Time: 0m 0s\n",
-      "\tTrain Loss: 0.210 | Train Acc: 95.06%\n",
-      "\t Val. Loss: 0.368 |  Val. Acc: 84.89%\n",
-      "Epoch: 22 | Epoch Time: 0m 0s\n",
-      "\tTrain Loss: 0.199 | Train Acc: 95.23%\n",
-      "\t Val. Loss: 0.364 |  Val. Acc: 84.99%\n",
-      "Epoch: 23 | Epoch Time: 0m 0s\n",
-      "\tTrain Loss: 0.184 | Train Acc: 96.25%\n",
-      "\t Val. Loss: 0.360 |  Val. Acc: 85.11%\n",
-      "Epoch: 24 | Epoch Time: 0m 0s\n",
-      "\tTrain Loss: 0.174 | Train Acc: 96.50%\n",
-      "\t Val. Loss: 0.357 |  Val. Acc: 85.15%\n",
-      "Epoch: 25 | Epoch Time: 0m 0s\n",
-      "\tTrain Loss: 0.164 | Train Acc: 96.82%\n",
-      "\t Val. Loss: 0.353 |  Val. Acc: 85.30%\n"
+      "\tTrain Loss: 0.202 | Train Acc: 93.33%\n",
+      "\t Val. Loss: 0.292 |  Val. Acc: 88.55%\n"
      ]
     }
    ],
    "source": [
-    "n_epochs = 25\n",
+    "n_epochs = 10\n",
     "\n",
     "best_valid_loss = float('inf')\n",
     "\n",
@@ -1060,7 +1016,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Loss: 0.380 | Test Acc: 83.80%\n"
+      "Test Loss: 0.326 | Test Acc: 86.38%\n"
      ]
     }
    ],
@@ -1097,7 +1053,7 @@
     {
      "data": {
       "text/plain": [
-       "7.371189667537692e-07"
+       "1.9899568104442267e-10"
       ]
      },
      "execution_count": 53,
@@ -1119,7 +1075,7 @@
     {
      "data": {
       "text/plain": [
-       "0.9999914169311523"
+       "0.9999610185623169"
       ]
      },
      "execution_count": 54,
@@ -1141,7 +1097,7 @@
     {
      "data": {
       "text/plain": [
-       "0.9331671595573425"
+       "0.21951617300510406"
       ]
      },
      "execution_count": 55,
@@ -1150,8 +1106,8 @@
     }
    ],
    "source": [
-    "sentence = \"i thought it was going to be the absolute worst movie of all time, \\\n",
-    "but it was actually one of the greatest films i have ever seen in my life.\"\n",
+    "sentence = \"i thought it was going to be one of the greatest films i have ever seen in my life, \\\n",
+    "but it was actually the absolute worst movie of all time.\"\n",
     "\n",
     "predict_sentiment(tokenizer, vocab, model, device, sentence)"
    ]
@@ -1164,7 +1120,7 @@
     {
      "data": {
       "text/plain": [
-       "0.9331671595573425"
+       "0.21951621770858765"
       ]
      },
      "execution_count": 56,
@@ -1173,8 +1129,8 @@
     }
    ],
    "source": [
-    "sentence = \"i thought it was going to be one of the greatest films i have ever seen in my life, \\\n",
-    "but it was actually the absolute worst movie of all time.\"\n",
+    "sentence = \"i thought it was going to be the absolute worst movie of all time, \\\n",
+    "but it was actually one of the greatest films i have ever seen in my life.\"\n",
     "\n",
     "predict_sentiment(tokenizer, vocab, model, device, sentence)"
    ]
