--- a/experimental/3_rnn_bilstm.ipynb
+++ b/experimental/3_rnn_bilstm.ipynb
@@ -10,7 +10,7 @@
     },
     "colab_type": "code",
     "id": "lIYdn1woOS1n",
-    "outputId": "05f43a3e-f111-4f96-ee3e-d95027c041c8"
+    "outputId": "a30c21d5-b7cc-4ea6-a0d3-f9f1392ee04a"
    },
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "id": "kjHAEB8BKbEY"
+    "id": "II-XIfhSkZS-"
    },
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "id": "HRkCva2fJ_kr"
+    "id": "kIkeEy2mkcT6"
    },
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "id": "RkgVHXXSKAyU"
+    "id": "_a5ucP1ZkeDv"
    },
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "id": "T5fGSB1OKC77"
+    "id": "1WP4nz-_kf_0"
    },
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "id": "zvcEouXQLmHz"
+    "id": "pPvrMZlWkicJ"
    },
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "id": "dnpijQRFLnXV"
+    "id": "SMsMQSuSkkt3"
    },
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "id": "VOl6UxZoLdg_"
+    "id": "Yie7TKWKkmeK"
    },
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "id": "eNLrpvt2Lgsr"
+    "id": "9jW7Ci7WkoSn"
    },
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "id": "AN1YQiYfLr0_"
+    "id": "cvSZt_iFkqkt"
    },
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "id": "dlejEwWLMScW"
+    "id": "bwsSiBdkktRk"
    },
    "outputs": [],
    "source": [
@@ -234,7 +234,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "id": "hggYldmOQahU"
+    "id": "5m3xRusSk8v3"
    },
    "outputs": [],
    "source": [
@@ -262,7 +262,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "id": "gw4LBXWAQiEC"
+    "id": "1ZMuZqZxk8-p"
    },
    "outputs": [],
    "source": [
@@ -277,7 +277,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "id": "d0dP9wnZQjaU"
+    "id": "mxG97Si9lAI2"
    },
    "outputs": [],
    "source": [
@@ -305,42 +305,52 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "id": "LGQ5JkfBQll0"
+    "id": "ty3NbheMlPYs"
    },
    "outputs": [],
    "source": [
-    "class GRU(nn.Module):\n",
-    "    def __init__(self, input_dim, emb_dim, hid_dim, output_dim, pad_idx):\n",
+    "class BiLSTM(nn.Module):\n",
+    "    def __init__(self, input_dim, emb_dim, hid_dim, output_dim, n_layers, dropout, pad_idx):\n",
     "\n",
     "        super().__init__()\n",
     "\n",
     "        self.embedding = nn.Embedding(input_dim, emb_dim)\n",
-    "        self.gru = nn.GRU(emb_dim, hid_dim)\n",
-    "        self.fc = nn.Linear(hid_dim, output_dim)\n",
+    "        self.lstm = nn.LSTM(emb_dim, hid_dim, num_layers = n_layers, bidirectional = True, dropout = dropout)\n",
+    "        self.fc = nn.Linear(2 * hid_dim, output_dim)\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
     "\n",
     "    def forward(self, text, lengths):\n",
     "\n",
     "        # text = [seq len, batch size]\n",
     "        # lengths = [batch size]\n",
     "\n",
-    "        embedded = self.embedding(text)\n",
+    "        embedded = self.dropout(self.embedding(text))\n",
     "\n",
     "        # embedded = [seq len, batch size, emb dim]\n",
     "\n",
     "        packed_embedded = nn.utils.rnn.pack_padded_sequence(embedded, lengths, enforce_sorted = False)\n",
     "\n",
-    "        packed_output, hidden = self.gru(packed_embedded)\n",
+    "        packed_output, (hidden, cell) = self.lstm(packed_embedded)\n",
     "\n",
     "        output, _ = nn.utils.rnn.pad_packed_sequence(packed_output)\n",
     "\n",
     "        # outputs = [seq_len, batch size, n directions * hid dim]\n",
     "        # hidden = [n layers * n directions, batch size, hid dim]\n",
     "\n",
-    "        prediction = self.fc(hidden.squeeze(0))\n",
+    "        hidden_fwd = hidden[-1]\n",
+    "        hidden_bck = hidden[-2]\n",
+    "\n",
+    "        # hidden_fwd/bck = [batch size, hid dim]\n",
+    "\n",
+    "        hidden = torch.cat((hidden_fwd, hidden_bck), dim = 1)\n",
+    "\n",
+    "        # hidden = [batch size, hid dim * 2]\n",
+    "\n",
+    "        prediction = self.fc(self.dropout(hidden))\n",
     "\n",
     "        # prediction = [batch size, output dim]\n",
     "\n",
-    "        return prediction "
+    "        return prediction"
    ]
   },
   {
@@ -349,7 +359,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "id": "mEb-ff-bQtKL"
+    "id": "trg6yTjBqOLZ"
    },
    "outputs": [],
    "source": [
@@ -357,8 +367,10 @@
     "emb_dim = 100\n",
     "hid_dim = 256\n",
     "output_dim = 2\n",
+    "n_layers = 2\n",
+    "dropout = 0.5\n",
     "\n",
-    "model = GRU(input_dim, emb_dim, hid_dim, output_dim, pad_idx)"
+    "model = BiLSTM(input_dim, emb_dim, hid_dim, output_dim, n_layers, dropout, pad_idx)"
    ]
   },
   {
@@ -367,7 +379,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "id": "WEwnyJT_Tm8q"
+    "id": "9dgdCRsqqQoD"
    },
    "outputs": [],
    "source": [
@@ -384,15 +396,15 @@
      "height": 35
     },
     "colab_type": "code",
-    "id": "SJdVErKTTogS",
-    "outputId": "aaf74c2e-2b9f-47df-a672-b809ffffd6e5"
+    "id": "bfiGzjvnqV-s",
+    "outputId": "168a3662-b95a-48de-d722-c76264e8c8ab"
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The model has 2,775,658 trainable parameters\n"
+      "The model has 4,811,370 trainable parameters\n"
      ]
     }
    ],
@@ -406,7 +418,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "id": "HE9cEN3XTpf7"
+    "id": "Sah17A41qW5d"
    },
    "outputs": [],
    "source": [
@@ -420,7 +432,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "id": "AyI08bfvTrCV"
+    "id": "S1Dfcn2Nqabo"
    },
    "outputs": [],
    "source": [
@@ -451,7 +463,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "id": "GPMcsd6HTtoC"
+    "id": "sGyV94f7qvdr"
    },
    "outputs": [],
    "source": [
@@ -469,8 +481,8 @@
      "height": 139
     },
     "colab_type": "code",
-    "id": "LhlnYb2ZTvPr",
-    "outputId": "8d56d0e2-6af1-40fe-ea1e-9ec7a42d8b15"
+    "id": "KYnGxbVisUsk",
+    "outputId": "e1a88c1c-0f3e-48c6-afcf-9d791fd54bb9"
    },
    "outputs": [
     {
@@ -500,7 +512,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "id": "Sji9nWvaTxcp"
+    "id": "DTwNU41WseMS"
    },
    "outputs": [],
    "source": [
@@ -513,7 +525,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "id": "a4Q-afN8Tyqr"
+    "id": "Rxlx7a72s1ze"
    },
    "outputs": [],
    "source": [
@@ -526,7 +538,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "id": "PjZOAABMT0-T"
+    "id": "1CLimBxus2yX"
    },
    "outputs": [],
    "source": [
@@ -539,7 +551,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "id": "6cYt2pfoT3TD"
+    "id": "108fm55ftBgO"
    },
    "outputs": [],
    "source": [
@@ -553,7 +565,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "id": "SSdhLxTJT4mn"
+    "id": "IYCxbvXUvE5v"
    },
    "outputs": [],
    "source": [
@@ -570,7 +582,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "id": "EoJT5j-1T54w"
+    "id": "Ik2JQo6TvGml"
    },
    "outputs": [],
    "source": [
@@ -610,7 +622,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "id": "UBh7g1cnUBMG"
+    "id": "aGy1Zk6jvIf8"
    },
    "outputs": [],
    "source": [
@@ -646,7 +658,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "id": "jSMtdoeSUDAH"
+    "id": "9MyMRRzbvKPx"
    },
    "outputs": [],
    "source": [
@@ -666,44 +678,44 @@
      "height": 537
     },
     "colab_type": "code",
-    "id": "lG-dJsjFUF8x",
-    "outputId": "c434d13f-4efa-4a7c-c346-5e886db0405d"
+    "id": "dRKwD51WvMa3",
+    "outputId": "79389e66-c1bf-45c9-a919-63ee787ad660"
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 01 | Epoch Time: 0m 8s\n",
-      "\tTrain Loss: 0.634 | Train Acc: 62.44%\n",
-      "\t Val. Loss: 0.474 |  Val. Acc: 77.64%\n",
-      "Epoch: 02 | Epoch Time: 0m 8s\n",
-      "\tTrain Loss: 0.375 | Train Acc: 83.86%\n",
-      "\t Val. Loss: 0.333 |  Val. Acc: 86.20%\n",
-      "Epoch: 03 | Epoch Time: 0m 8s\n",
-      "\tTrain Loss: 0.251 | Train Acc: 90.32%\n",
-      "\t Val. Loss: 0.286 |  Val. Acc: 89.07%\n",
-      "Epoch: 04 | Epoch Time: 0m 8s\n",
-      "\tTrain Loss: 0.170 | Train Acc: 93.78%\n",
-      "\t Val. Loss: 0.316 |  Val. Acc: 89.58%\n",
-      "Epoch: 05 | Epoch Time: 0m 8s\n",
-      "\tTrain Loss: 0.106 | Train Acc: 96.58%\n",
-      "\t Val. Loss: 0.319 |  Val. Acc: 89.63%\n",
-      "Epoch: 06 | Epoch Time: 0m 8s\n",
-      "\tTrain Loss: 0.066 | Train Acc: 98.08%\n",
-      "\t Val. Loss: 0.327 |  Val. Acc: 89.52%\n",
-      "Epoch: 07 | Epoch Time: 0m 8s\n",
-      "\tTrain Loss: 0.041 | Train Acc: 98.82%\n",
-      "\t Val. Loss: 0.451 |  Val. Acc: 88.07%\n",
-      "Epoch: 08 | Epoch Time: 0m 8s\n",
-      "\tTrain Loss: 0.021 | Train Acc: 99.43%\n",
-      "\t Val. Loss: 0.472 |  Val. Acc: 88.16%\n",
-      "Epoch: 09 | Epoch Time: 0m 7s\n",
-      "\tTrain Loss: 0.014 | Train Acc: 99.71%\n",
-      "\t Val. Loss: 0.520 |  Val. Acc: 88.43%\n",
-      "Epoch: 10 | Epoch Time: 0m 7s\n",
-      "\tTrain Loss: 0.005 | Train Acc: 99.93%\n",
-      "\t Val. Loss: 0.660 |  Val. Acc: 88.43%\n"
+      "Epoch: 01 | Epoch Time: 0m 24s\n",
+      "\tTrain Loss: 0.668 | Train Acc: 59.01%\n",
+      "\t Val. Loss: 0.652 |  Val. Acc: 62.33%\n",
+      "Epoch: 02 | Epoch Time: 0m 24s\n",
+      "\tTrain Loss: 0.602 | Train Acc: 67.75%\n",
+      "\t Val. Loss: 0.478 |  Val. Acc: 77.18%\n",
+      "Epoch: 03 | Epoch Time: 0m 24s\n",
+      "\tTrain Loss: 0.497 | Train Acc: 76.59%\n",
+      "\t Val. Loss: 0.478 |  Val. Acc: 80.62%\n",
+      "Epoch: 04 | Epoch Time: 0m 24s\n",
+      "\tTrain Loss: 0.456 | Train Acc: 79.24%\n",
+      "\t Val. Loss: 0.397 |  Val. Acc: 83.30%\n",
+      "Epoch: 05 | Epoch Time: 0m 24s\n",
+      "\tTrain Loss: 0.391 | Train Acc: 82.72%\n",
+      "\t Val. Loss: 0.344 |  Val. Acc: 85.23%\n",
+      "Epoch: 06 | Epoch Time: 0m 24s\n",
+      "\tTrain Loss: 0.345 | Train Acc: 85.30%\n",
+      "\t Val. Loss: 0.350 |  Val. Acc: 86.12%\n",
+      "Epoch: 07 | Epoch Time: 0m 24s\n",
+      "\tTrain Loss: 0.314 | Train Acc: 86.75%\n",
+      "\t Val. Loss: 0.310 |  Val. Acc: 87.50%\n",
+      "Epoch: 08 | Epoch Time: 0m 24s\n",
+      "\tTrain Loss: 0.266 | Train Acc: 89.54%\n",
+      "\t Val. Loss: 0.315 |  Val. Acc: 88.16%\n",
+      "Epoch: 09 | Epoch Time: 0m 24s\n",
+      "\tTrain Loss: 0.247 | Train Acc: 90.21%\n",
+      "\t Val. Loss: 0.285 |  Val. Acc: 89.02%\n",
+      "Epoch: 10 | Epoch Time: 0m 24s\n",
+      "\tTrain Loss: 0.217 | Train Acc: 91.79%\n",
+      "\t Val. Loss: 0.282 |  Val. Acc: 88.98%\n"
      ]
     }
    ],
@@ -725,7 +737,7 @@
     "    \n",
     "    if valid_loss < best_valid_loss:\n",
     "        best_valid_loss = valid_loss\n",
-    "        torch.save(model.state_dict(), 'gru-model.pt')\n",
+    "        torch.save(model.state_dict(), 'bilstm-model.pt')\n",
     "    \n",
     "    print(f'Epoch: {epoch+1:02} | Epoch Time: {epoch_mins}m {epoch_secs}s')\n",
     "    print(f'\\tTrain Loss: {train_loss:.3f} | Train Acc: {train_acc*100:.2f}%')\n",
@@ -741,20 +753,20 @@
      "height": 35
     },
     "colab_type": "code",
-    "id": "PH7-0f6nUKRb",
-    "outputId": "faf1e6dd-c99e-4fda-c6f8-435a08ca0073"
+    "id": "hKOg4oARvPHJ",
+    "outputId": "7cfe4b85-de2f-47f3-8437-45589c32ceca"
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Loss: 0.290 | Test Acc: 88.71%\n"
+      "Test Loss: 0.294 | Test Acc: 87.95%\n"
      ]
     }
    ],
    "source": [
-    "model.load_state_dict(torch.load('gru-model.pt'))\n",
+    "model.load_state_dict(torch.load('bilstm-model.pt'))\n",
     "\n",
     "test_loss, test_acc = evaluate(model, test_iterator, criterion, device)\n",
     "\n",
@@ -767,7 +779,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "id": "rnWNSo8kdcl_"
+    "id": "tQ4Jsf_vvWgB"
    },
    "outputs": [],
    "source": [
@@ -792,14 +804,14 @@
      "height": 35
     },
     "colab_type": "code",
-    "id": "hb7bC-aEeC1q",
-    "outputId": "059cccd1-efb4-404c-81f9-606983c23b33"
+    "id": "Yy7_6rhovZTE",
+    "outputId": "78860852-39ea-4a7b-eb33-9a1a077fb9e0"
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.07642160356044769"
+       "0.008071469143033028"
       ]
      },
      "execution_count": 34,
@@ -822,14 +834,14 @@
      "height": 35
     },
     "colab_type": "code",
-    "id": "APEVZ3D4eEVw",
-    "outputId": "0d188e29-6e4e-4183-c7aa-467ea8f1afe6"
+    "id": "L3LmQxrgvau9",
+    "outputId": "0204aa17-0bc1-45f2-9be1-c014798af120"
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8930155634880066"
+       "0.9896865487098694"
       ]
      },
      "execution_count": 35,
@@ -852,14 +864,14 @@
      "height": 35
     },
     "colab_type": "code",
-    "id": "X7GMey_jebjg",
-    "outputId": "04ca4196-51f0-4661-ffe4-8f4dd199baf4"
+    "id": "t7Qoy21Bvb7v",
+    "outputId": "6094a141-4f37-4110-edc7-aa14b9a3c667"
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.2206803858280182"
+       "0.029767075553536415"
       ]
      },
      "execution_count": 36,
@@ -883,14 +895,14 @@
      "height": 35
     },
     "colab_type": "code",
-    "id": "kOoESlQSxYx2",
-    "outputId": "e5826bef-5f9c-41f6-9eb0-795318280045"
+    "id": "EPGXBr18vdQT",
+    "outputId": "e5b3d210-0254-4d5f-bdbe-609c0b7d6a8a"
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5373267531394958"
+       "0.5513127446174622"
       ]
      },
      "execution_count": 37,
@@ -910,7 +922,7 @@
   "accelerator": "GPU",
   "colab": {
    "machine_shape": "hm",
-   "name": "2_rnn_gru.ipynb",
+   "name": "scratchpad",
    "provenance": []
   },
   "kernelspec": {
